# drgn-mcp

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
src/drgn_mcp/: _app.py  server.py  state.py
src/drgn_mcp/tools/: __init__.py  _helpers.py  bpf.py  cgroup.py  core.py  fs.py  inspection.py  memory.py  net.py  sched.py  subsystems.py  sysinfo.py  traversal.py  utils.py
