[project]
name = "drgn-mcp"
version = "0.1.0"
description = "MCP server for drgn programmable debugger"
license = "LGPL-2.1-or-later"
requires-python = ">=3.12"
dependencies = [
    "drgn",
    "mcp[cli]",
]

[dependency-groups]
dev = ["pyright", "ruff", "black"]

[project.scripts]
drgn-mcp = "drgn_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
